# steamie

./: .editorconfig  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DRM-FREE-GAMES.md  LICENSE  PLAN-v0.4.1-direct-launch.md  README.md  SECURITY.md  STEAM-TUI-PLAN.md  how_to_release.md
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: cd.yml  ci.yml
crates/steamie/: Cargo.toml
crates/steamie-api/: Cargo.toml
crates/steamie-api/src/: client.rs  lib.rs
crates/steamie-api/src/models/: achievement.rs  app_details.rs  game.rs  news.rs  player.rs  wishlist.rs
crates/steamie-core/: Cargo.toml  DRM-FREE-GAMES.md
crates/steamie-core/src/: auth.rs  cache.rs  chat_history.rs  config.rs  drm_free.rs  launcher.rs  lib.rs  session.rs  steam_apps.rs  vdf.rs
crates/steamie/src/: app.rs  main.rs  network.rs  protocol.rs  routes.rs  runner.rs
crates/steamie/src/event/: events.rs
crates/steamie/src/handlers/: friends.rs  library.rs  news.rs  wishlist.rs
crates/steamie/src/views/: chat.rs  friends.rs  help.rs  loading.rs  mod.rs  root.rs
crates/vapour-api/: Cargo.toml
crates/vapour-api/src/: client.rs
crates/vapour-api/src/models/: game.rs  mod.rs
crates/vapour-core/: Cargo.toml
crates/vapour-core/src/: auth.rs  cache.rs  chat_history.rs  config.rs  drm_free.rs  launcher.rs  lib.rs  session.rs  steam_apps.rs  vdf.rs
crates/vapour-tui/: Cargo.toml
crates/vapour-tui/src/: app.rs  io_event.rs  main.rs  network.rs  protocol.rs  routes.rs  runner.rs  theme.rs
crates/vapour-tui/src/event/: events.rs  key.rs  mod.rs
crates/vapour-tui/src/handlers/: auth.rs  chat.rs  friends.rs  game_detail.rs  library.rs  mod.rs  news.rs  quick_launch.rs  search.rs  wishlist.rs
crates/vapour-tui/src/views/: auth.rs  chat.rs  error.rs  friends.rs  game_detail.rs  help.rs  library.rs  loading.rs  mod.rs  news.rs  quick_launch.rs  root.rs  wishlist.rs
packaging/aur/: README.md
packaging/aur/steamie/: PKGBUILD
packaging/aur/steamie-bin/: PKGBUILD
