[workspace]
members = [
    "crates/steamie-api",
    "crates/steamie-core",
    "crates/steamie",
]
resolver = "2"

[workspace.package]
version = "0.4.1"
edition = "2024"
license = "MIT"
repository = "https://github.com/LargeModGames/steamie"
homepage = "https://github.com/LargeModGames/steamie"
rust-version = "1.85"
authors = ["LargeModGames"]
keywords = ["steam", "tui", "terminal", "ratatui", "gaming"]
categories = ["command-line-utilities", "games"]

[workspace.dependencies]
# Internal crates carry both a path (for local builds) and a version (for crates.io publish).
steamie-api = { path = "crates/steamie-api", version = "0.4.1" }
steamie-core = { path = "crates/steamie-core", version = "0.4.1" }
steam-cm-protocol = "0.4.1"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
