[package]
name = "steamie-core"
version.workspace = true
edition.workspace = true
description = "Config, session, cache, and launcher for steamie"
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
steamie-api = { workspace = true }
steam-cm-protocol = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
toml = "1.1"
dirs = "6"
