[package]
name = "steamie"
version.workspace = true
edition.workspace = true
description = "A terminal-native Steam client written in Rust — browse your library, chat, and launch games"
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
keywords.workspace = true
categories.workspace = true

[[bin]]
name = "steamie"
path = "src/main.rs"

[dependencies]
steamie-core = { workspace = true }
steamie-api = { workspace = true }
steam-cm-protocol = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
ratatui = { version = "0.30", features = ["crossterm"] }
crossterm = "0.29"
clap = { version = "4", features = ["derive"] }
futures = "0.3"
qrcode = "0.14"
rpassword = "7"
notify-rust = "4"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
dirs = "6"
