[package]
name = "vapour-api"
version = "0.1.0"
edition = "2024"
description = "Steam Web API and Store API client"
license = "GPL-3.0-only"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
reqwest = { workspace = true }
