[package]
name = "vapour-api"
version.workspace = true
edition.workspace = true
description = "Steam Web API and Store API client"
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
reqwest = { workspace = true }
