[package]
name = "vapour-core"
version.workspace = true
edition.workspace = true
description = "Config, session, and cache for Vapour"
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
vapour-api = { path = "../vapour-api" }
vapour-protocol = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
toml = "0.8"
dirs = "6"
