[package]
name = "vapour-core"
version.workspace = true
edition.workspace = true
description = "Config, session, cache, and launcher for vapour"
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
vapour-api = { workspace = true }
vapour-protocol = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
toml = "0.8"
dirs = "6"
