[package]
name = "vapour-tui"
version = "0.1.0"
edition = "2024"
description = "Terminal UI for Vapour"
license = "GPL-3.0-only"

[[bin]]
name = "vapour"
path = "src/main.rs"

[dependencies]
vapour-core = { path = "../vapour-core" }
vapour-api = { path = "../vapour-api" }
tokio = { workspace = true }
anyhow = { workspace = true }
ratatui = { version = "0.30", features = ["crossterm"] }
crossterm = "0.29"
clap = { version = "4", features = ["derive"] }
futures = "0.3"
