[package]
name = "vapour-tui"
version.workspace = true
edition.workspace = true
description = "Terminal UI for Vapour"
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "vapour"
path = "src/main.rs"

[dependencies]
vapour-core = { path = "../vapour-core" }
vapour-api = { path = "../vapour-api" }
vapour-protocol = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
ratatui = { version = "0.30", features = ["crossterm"] }
crossterm = "0.29"
clap = { version = "4", features = ["derive"] }
futures = "0.3"
qrcode = "0.14"
rpassword = "7"
notify-rust = "4"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
dirs = "6"
